--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://BorysovS.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@mui/material": "^5.12.0",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -25,7 +27,7 @@
     "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.6",
+    "styled-components": "^5.3.9",
     "web-vitals": "^2.1.3",
     "yup": "^1.0.0"
   },
